log
Wed 13 Sep 2023 10:52:43 PM UTC: 
 tests:  1|8
total_score: 0/70
75ad396
Wed 13 Sep 2023 11:06:35 PM UTC: 
 treemap.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 54 insertions(+), 10 deletions(-)
 tests:  4|7
total_score: 5/70
5a6b630
Thu 14 Sep 2023 12:44:58 AM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d593ede
Thu 14 Sep 2023 07:19:10 PM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
  115 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4721b7
Thu 14 Sep 2023 07:19:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
14d1477
